--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,12 @@
 server.port=8080
 
 # 数据库连接配置
-spring.datasource.url=jdbc:postgresql://localhost:5432/risk
+spring.datasource.url=jdbc:postgresql://localhost:5432/risk?currentSchema=public
 spring.datasource.username=postgres
 spring.datasource.password=Postgres#7556
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA/Hibernate 配置
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
