--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,21 @@
 # 服务器端口
 server.port=8080
 
-# 数据库连接配置
-spring.datasource.url=jdbc:postgresql://localhost:5432/risk?currentSchema=public
-spring.datasource.username=postgres
-spring.datasource.password=Postgres#7556
+# 数据库连接配置 (通过环境变量注入)
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/risk}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:Postgres#7556}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA/Hibernate 配置
-spring.jpa.hibernate.ddl-auto=create-drop
+# 在生产环境中，强烈建议将 ddl-auto 设置为 validate 或直接移除，使用Flyway/Liquibase进行数据库迁移
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # JWT Settings
-jwt.secret=a-very-long-and-secure-secret-key-for-jwt-token-generation-12345
+jwt.secret=${JWT_SECRET:a-very-long-and-secure-secret-key-for-jwt-token-generation-12345}
 jwt.expiration-seconds=7200
+
+# 静态资源文件路径配置，指向我们在 Dockerfile 中创建的目录
+spring.web.resources.static-locations=classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,file:/app/static/
