--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,10 +7,15 @@ spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:Postgres#7556}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+# Flyway 配置
+spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=true
+spring.flyway.baseline-version=1
+
 # JPA/Hibernate 配置
 # 在生产环境中，强烈建议将 ddl-auto 设置为 validate 或直接移除，使用Flyway/Liquibase进行数据库迁移
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # JWT Settings
