增加风险蔓延模拟后端接口

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.flyway.baseline-version=1
 
 # JPA/Hibernate 配置
 # 在生产环境中，强烈建议将 ddl-auto 设置为 validate 或直接移除，使用Flyway/Liquibase进行数据库迁移
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
