--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,12 @@
             <artifactId>opencsv</artifactId>
             <version>5.12.0</version>
         </dependency>
+        <!-- Jsoup HTML Parser -->
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.17.2</version>
+        </dependency>
         <!-- Flyway Migration -->
         <dependency>
             <groupId>org.flywaydb</groupId>
