--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,16 +6,15 @@ spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:Postgres#7556}
 spring.datasource.driver-class-name=org.postgresql.Driver
 # Flyway 配置
-spring.flyway.enabled=true
-spring.flyway.baseline-on-migrate=true
-# spring.flyway.baseline-version=1
+spring.flyway.enabled=${SPRING_FLYWAY_ENABLED:true}
+spring.flyway.baseline-on-migrate=${SPRING_FLYWAY_BASELINE_ON_MIGRATE:true}
 # JPA/Hibernate 配置
 # 在生产环境中，强烈建议将 ddl-auto 设置为 validate 或直接移除，使用Flyway/Liquibase进行数据库迁移
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=${SRPING_JPA_HIBERNATE_DDL_AUTO:create-drop}
+spring.jpa.show-sql=${SPRING_JPA_SHOW_SQL:false}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # JWT Settings
 jwt.secret=${JWT_SECRET:a-very-long-and-secure-secret-key-for-jwt-token-generation-12345}
-jwt.expiration-seconds=7200
+jwt.expiration-seconds=${JWT_EXPIRATION_SECONDS:7200}
 # 静态资源文件路径配置，指向我们在 Dockerfile 中创建的目录
 spring.web.resources.static-locations=classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,file:/app/static/
