--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.flyway.enabled=${SPRING_FLYWAY_ENABLED:true}
 spring.flyway.baseline-on-migrate=${SPRING_FLYWAY_BASELINE_ON_MIGRATE:true}
 # JPA/Hibernate 配置
 # 在生产环境中，强烈建议将 ddl-auto 设置为 validate 或直接移除，使用Flyway/Liquibase进行数据库迁移
-spring.jpa.hibernate.ddl-auto=${SRPING_JPA_HIBERNATE_DDL_AUTO:create-drop}
+spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO:validate}
 spring.jpa.show-sql=${SPRING_JPA_SHOW_SQL:false}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # JWT Settings
@@ -18,3 +18,5 @@ jwt.secret=${JWT_SECRET:a-very-long-and-secure-secret-key-for-jwt-token-generati
 jwt.expiration-seconds=${JWT_EXPIRATION_SECONDS:7200}
 # 静态资源文件路径配置，指向我们在 Dockerfile 中创建的目录
 spring.web.resources.static-locations=classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,file:/app/static/
+# CORS配置
+cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:5173,http://39.105.12.79:30946}
