--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,5 @@ jwt.expiration-seconds=${JWT_EXPIRATION_SECONDS:7200}
 spring.web.resources.static-locations=classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,file:/app/static/
 # CORS配置
 cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:5173,http://39.105.12.79:30946}
+# 切换到旧版的 AntPathMatcher 策略以支持更灵活的路由匹配规则
+#spring.mvc.pathmatch.matching-strategy=ant_path_matcher
