优化上传文件的配置为100M

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,7 @@ spring.web.resources.static-locations=classpath:/META-INF/resources/,classpath:/
 cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:5173,http://39.105.12.79:30946}
 # 切换到旧版的 AntPathMatcher 策略以支持更灵活的路由匹配规则
 #spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
+# 文件上传配置
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
