增加电子科大接口

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,8 @@ cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:5173,http://39.105.
 # 文件上传配置
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
+
+# 电子科大API配置
+uestc.api.baseUrl=https://m1.apifoxmock.com/m1/6993655-6711929-default
+uestc.api.username=admin
+uestc.api.password=123456
